classDiagram
    %% <|--	Inheritance
    %% *--	Composition
    %% o--	Aggregation
    %% -->	Association
    %% --	Link (Solid)
    %% ..>	Dependency
    %% ..|>	Realization
    %% ..	Link (Dashed)

    %% Auth:

    class AuthController {
    }

    AuthController ..> AuthService

    class AuthService {
        authenticate(code: str)
        get_vatsim_connect_url(state: str | None = None)
    }

    AuthService ..> VatsimAuthService
    AuthService ..> UserRepositoryInterface

    class VatsimAuthService {
        exchange_code(code: str) AuthResponse
        get_user(access_token: str) UserResponse
    }

    class UserRepositoryInterface {
        get_user(id: uuid.UUID) User
        get_user_by_cid(cid: int) User
        add_user(user: User)
        update_user(user: User)
    }

    %% Plugin Token:

    class PluginTokenController {
    }

    PluginTokenController ..> PluginTokenServiceInterface

    class PluginTokenServiceInterface {
        start_plugin_auth_flow() PluginToken
        get_authorization_redirect(token_id: str, user_id: str, label: str) str 
        exchange_polling_secret_for_token(token_id: str, secret: str) str | None
        get_tokens(scope: Literal["own", "all"], user: User)
        revoke_token(token_id: str, user: User)
        get_active_token_from_bearer(self, bearer_token: str) PluginToken
    }

    PluginTokenServiceInterface ..> PluginTokenRepositoryInterface 

    class PluginTokenRepositoryInterface {
        create(token: PluginToken) PluginToken
        get(id: uuid.UUID) PluginToken
        get_tokens() list[PluginToken]
        get_tokens_by_user(user_id: uuid.UUID) list[PluginToken]
        update(token: PluginToken)
        delete(id: uuid.UUID)
    }

    %% SilentRequest:

    class SilentRequestServiceInterface {
        get_requests_by_icao(icao: str) list[SilentRequestModel]
        get_all_requests() list[SilentRequestModel]
        create_requests(user: User)
        delete_request(actor: User, target_callsign: str | None = None)
    }

    SilentRequestServiceInterface ..> SilentRequestRepositoryInterface
    SilentRequestServiceInterface ..> DatafeedRepositoryInterface

    class SilentRequestRepositoryInterface {
        create_request(request: SilentRequestModel) SilentRequestModel
        get_request_by_callsign(callsign: str) SilentRequestModel | None
        get_request_by_user_id(id: uuid.UUID) SilentRequestModel | None
        get_requests_by_icao(icao: str) list[SilentRequestModel] | None
        get_all_requests() list[SilentRequestModel] | None
        delete_request_by_callsign(callsign: str)
    }

    %% Datafeed:

    class DatafeedRepositoryInterface {
        update()
        has_pilot()
        get_pilot_by_callsign()
        get_pilot_by_cid()
        has_controller()
        get_controller_by_callsign()
        get_controller_by_cid()
    }